# pipeline-forecast

./: .gitignore  README.md  pyproject.toml
config/: main_config.yaml
lightning_logs/version_0/: events.out.tfevents.1781036265.fedora
lightning_logs/version_1/: events.out.tfevents.1781036547.fedora  hparams.yaml
scripts/: run_experiment.sh  setup_venv.sh
src/analysis/: diagnostics.py
src/ingestion/: download_dataset.py
src/metrics/: evaluate_metrics.py  export_comparative.py
src/models/: arima_baseline.py  deep_baselines.py  ets_baseline.py  hybrid_combiner.py  hybrid_prophet_nhits.py  nhits_residual.py  prophet_baseline.py
src/utils/: general.py
src/visualization/: plot_results.py
