[project]
name = "pipeline-forecast"
version = "0.1.0"
description = ""
authors = [{ name = "Flavio Monteiro", email = "flaviohnm@gmail.com" }]
#package-mode = false
requires-python = ">=3.11.9"

[tool.poetry.dependencies]
python = ">=3.11.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
pyyaml = "^6.0" 
neuralforecast = "^1.7.0"
statsforecast = "^1.7.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
prophet = "^1.3.0"
plotly = "^6.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
